--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <title>Krisztián Papp</title>
   </head>
   <body>
+    <header>
+      <nav>
+        
+      </nav>
+    </header>
     <p>Hello World</p>
   </body>
 </html>
