--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
   </head>
   <body>
     <header>
-      <nav>
-        
-      </nav>
+      
     </header>
-    <p>Hello World</p>
+    <nav>
+      <a href="
+    </nav>
+    <main>
+      <iframe src="pages/about.html" name="content" width=100%></iframe>
+    </main>
   </body>
 </html>
