--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       
     </header>
     <nav>
-      <a href="
+      
     </nav>
     <main>
-      <iframe src="pages/about.html" name="content" width=100%></iframe>
+      <iframe src="https://github.com/pehsa" name="content" width=100%></iframe>
     </main>
   </body>
 </html>
