--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <main>
-      <iframe src="https://github.com/pehsa" name="content" width=100%></iframe>
+      <iframe src="https://github.com/pehsa" name="content" width=100% height=90%></iframe>
     </main>
   </body>
 </html>
