--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html>
-  <head>
+<html><head>
+<meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="UTF-8">
     <title>Krisztián Papp</title>
   </head>
   <body>
     <main>
-      <iframe src="https://github.com/pehsa" name="content" width=100% height=90%></iframe>
+  <p style="color: red;">Hello World</p>
     </main>
-  </body>
-</html>
+  
+
+</body></html>
