--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
-<html><head>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="UTF-8">
-    <title>Krisztián Papp</title>
-  </head>
-  <body>
-    <main>
-  <p style="color: red;">Hello World</p>
-    </main>
-  
-
-</body></html>
+<html lang="hu">
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+        <meta charset="UTF-8">
+        <title>Krisztián Papp</title>
+    </head>
+    <body>
+        <header>
+            <img src="https://www.incimages.com/uploaded_files/image/970x450/software-computer-code-1940x900_35196.jpg">
+        </header>
+        <nav>
+        </nav>
+        <main>
+            <p style="color: red;">Hello World</p>
+        </main>
+        <footer>
+        </footer>
+    </body>
+</html>
