--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img src="https://www.incimages.com/uploaded_files/image/970x450/software-computer-code-1940x900_35196.jpg">
+            <img src="https://i.stack.imgur.com/eEj5F.gif">
         </header>
         <nav>
         </nav>
